Fixed spacing

--- a/app/styles/_molecules/_limited-time-deal.scss
+++ b/app/styles/_molecules/_limited-time-deal.scss
@@ -40,7 +40,7 @@
 		color: $black;
 		line-height: 1.2em;
 		@include media($breakpoint-800){
-			padding-top: 1em;
+			padding-top: .5em;
 		}
 	}
 
